Fix : wrapping legal doc in container

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,11 +76,12 @@ h2 {
 h3,
 .h3-etapes {
     font-family: "Chewy", serif;
-    font-size: 2.5rem !important;
+    font-size: 2.5rem;
     font-weight: 400;
 }
 
-.h3-grpd .h3-cgv {
+.h3-grpd,
+.h3-cgv {
     font-size: 1.5rem !important;
 }
 
